--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:views="clr-namespace:HotelBooking.Views"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        MinWidth="800" MaxWidth="800" MinHeight="450" MaxHeight="450"
         x:Class="HotelBooking.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
-        Title="HotelBooking">
+        Title="HotelBooking"
+        Background="Gray">
         <views:MainView />
 </Window>
