--- a/Views/LoginView.axaml
+++ b/Views/LoginView.axaml
@@ -5,18 +5,16 @@
              xmlns:vm="using:HotelBooking.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="HotelBooking.Views.LoginView">
-  
-    <UserControl.DataContext>
-    <vm:LoginViewModel/>
-    </UserControl.DataContext>
 
 
-    <Grid ColumnDefinitions="1*, 1*, 1*" RowDefinitions="1*, 2*, 1*">
+    <Grid ColumnDefinitions="1*, 1*, 1*" RowDefinitions="1*, 3*, 1*">
 
 
     <Border Grid.Column="1" Grid.Row="1" Background="lightgray" Padding="15">
 
        <StackPanel Spacing="10">
+
+           <TextBlock Text="{Binding ErrorMessage}" FontSize="20" HorizontalAlignment="Center"/>
 
             <!-- Email -->
             <StackPanel Spacing="3">
@@ -50,7 +48,7 @@
                     CornerRadius="10"
                     Padding="10,5"
                     HorizontalAlignment="Center"
-                    Click="LoginButton_click"
+                    Command="{Binding LoginCommand}"
                     IsEnabled="{Binding CanLogin}"/>
         </StackPanel>
     </Border>
