--- a/Views/MainView.axaml
+++ b/Views/MainView.axaml
@@ -6,10 +6,96 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="HotelBooking.Views.MainView"
              x:DataType="vm:MainViewModel">
-  <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
-         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-    <vm:MainViewModel />
-  </Design.DataContext>
+
+
+<Grid ColumnDefinitions="1*,6*,1*" RowDefinitions="1*,4*,1*">
+
+    <Grid Grid.Column="1"
+          Grid.Row="0"
+          ColumnDefinitions="*,*,*,*"
+          VerticalAlignment="Bottom"
+          Grid.IsSharedSizeScope="True">
+        
+        <TextBlock Text="Hotel name"
+                   FontSize="20"
+                   FontWeight="Black"/>
+
+        <TextBlock Grid.Column="2"
+                   Text="Franchise"
+                   FontSize="20"
+                   FontWeight="Black"/>
+
+        <TextBlock Grid.Column="1"
+                   Text="Price"
+                   FontSize="20"
+                   FontWeight="Black"/>
+
+        <TextBlock Grid.Column="3"
+                   Text="Rating"
+                   HorizontalAlignment="Right"
+                   FontSize="20"
+                   FontWeight="Black"/>
+    </Grid>
+
+
+    <Border Grid.Column="1" Grid.Row="1" Grid.RowSpan="2"
+        BorderThickness="2">
+
+    <ListBox ItemsSource="{Binding Hotels}" Background="DarkRed">
+        
+        <ListBox.Styles>
+			<Style Selector="ListBoxItem">
+				<Setter Property="Background" Value="Yellow"/>
+				<Setter Property="Margin" Value="4"/>
+            </Style>
+        </ListBox.Styles>
+
+        <ListBox.ItemTemplate>
+            <DataTemplate>
+
+                <Grid RowDefinitions="Auto,Auto" 
+                      ColumnDefinitions="*,*,*,*"
+                      Grid.IsSharedSizeScope="True">
+
+                    <Border Grid.Row="0"
+                            Grid.ColumnSpan="4"
+                            BorderThickness="2">
+
+                        <Grid ColumnDefinitions="*,*,*,*">
+
+                            <TextBlock Text="{Binding Name}"
+                                       FontSize="20"
+                                       FontWeight="Bold"
+                                       TextWrapping="Wrap"/>
+
+                            <TextBlock Grid.Column="2"
+                                       Text="{Binding Franchise}"
+                                       FontSize="20"
+                                       FontWeight="Bold"/>
+                            
+                            <TextBlock Grid.Column="1"
+                                       Text="{Binding PriceRange}"
+                                       FontSize="20"
+                                       FontWeight="Bold"/>
+
+
+                            <TextBlock Grid.Column="3"
+                                       Text="{Binding StarRating}"
+                                       HorizontalAlignment="Right"
+                                       FontSize="20"
+                                       FontWeight="Bold"/>
+                        </Grid>
+                    </Border>
+                </Grid>
+
+            </DataTemplate>
+        </ListBox.ItemTemplate>
+    </ListBox>
+
+</Border>
+
+
+</Grid>
+
 
 </UserControl>
